Update tests (WIP)
Adding tests for each selector and argument type.  These helper
functions make it really easy to check tests and save the results.

--- a/test/test.org
+++ b/test/test.org
@@ -90,6 +90,12 @@ Gotta buy one first, though.
     :END:
 
     I mean, since no one has ever tried doing it before...
+*** SOMEDAY Write a symphony                                        :music:
+:PROPERTIES:
+:agenda-group: plans
+:END:
+
+I don't know when I'll get to this, so it's undated.
 
 * Code
 
