Change: Make Org property used for :auto-group selector customizable
This allows for using the :auto-group selector with already existing
Org properties.

* org-super-agenda.el Introduce org-super-agenda-group-property-name
  and use it instead of the hard-coded 'agenda-group' property name.
* examples.org Extend the :auto-group selector example to show the
  new feature.

Closes #27.  Closes #29.  Thanks to Michael Welle (@hmw42).

--- a/README.org
+++ b/README.org
@@ -171,6 +171,7 @@ If you find this useful, I'd appreciate if you would share a screenshot or two o
 ** Credits
 
 +  Thanks to [[https://github.com/balajisivaraman][Balaji Sivaraman]] for contributing the =:category= selector.
++  Thanks to [[https://github.com/hmw42][Michael Welle]] for contributing the customizable =auto-group= Org property name.
 
 ** License
 
