--- a/README.org
+++ b/README.org
@@ -32,7 +32,7 @@ There are also a few [[screenshots/index.org][more screenshots]].
 
 1.  Enable =org-super-agenda-mode=.
 2.  Set the variable =org-super-agenda-groups= as desired (see example below). 
-    *Note:* In order for groups to be automatically applied to all agenda buffers, =org-super-agenda-groups= must be set in the global scope (e.g. with =setq= in your init file).  It can also be =let=-bound in lisp code that calls =org-agenda= commands.
+    *Note:* In order for groups to be automatically applied to all agenda buffers, =org-super-agenda-groups= must be set in the global scope (e.g. with =setq= in your init file, or using the customization interface).  It can also be =let=-bound in lisp code that calls =org-agenda= commands.
 3.  Run an Org agenda command.
 4.  Start the day with confidence, knowing that nothing important has been lost in the jumble of /ahem/ overdue items.
 
