--- a/README.org
+++ b/README.org
@@ -128,7 +128,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 + =:effort>= Group items that are higher than (or equal to) the given effort. Argument is a time-duration string, like =5= or =0:05= for 5 minutes.
 +  =:habit= Group habit items. Habit items have a "STYLE: habit" Org property.
 +  =:heading-regexp= Group items whose headings match any of the given regular expressions.
-+  =:log= Group items from log mode.  Note that these items may also be matched by the =:time-grid= selector, so if you want these displayed in their own group, you may need to select them in a group before a group containing the =:time-grid= selector.
++  =:log= Group Agenda Log Mode items.  Argument may be ~close~ or ~closed~ to select items closed today; ~clock~ or ~clocked~ to select items clocked today; ~changed~ or ~state~ to select items whose to-do state was changed today; ~t~ to select any logged item, or ~nil~ to select any non-logged item.  (See also variable ~org-agenda-log-mode-items~.)  Note that these items may also be matched by the =:time-grid= selector, so if you want these displayed in their own group, you may need to select them in a group before a group containing the =:time-grid= selector.
 +  =:priority= Group items that match any of the given priorities. Argument may be a string or list of strings, which should be the priority letter, e.g. =A=.
 +  =:priority>= Group items that are higher than the given priority, e.g. =C=.
 +  =:priority>== Group items that are higher than or equal to the given priority, e.g. =B=.
